<?xml version="1.0" encoding="utf-8"?>
<!--

/*
 * Copyright (C) 2015 Iasc CHEN
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/connection_state"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/disconnected"
              android:textSize="18sp"
              android:layout_alignParentStart="true"
              android:textStyle="italic"/>
    <TextView android:id="@+id/isSerial"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/is_serial"
              android:textSize="18sp"
              android:layout_alignParentEnd="true"
              android:textStyle="italic"/>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:id="@+id/switchDraw" android:layout_below="@+id/isSerial"
            android:layout_alignParentEnd="true"
            android:textOn="@string/draw" android:enabled="false"/>

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:columnCount="8" android:rowCount="8"
            android:layout_below="@+id/switchDraw"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/gridLayout"
            android:background="@android:color/darker_gray">
    </GridLayout>

    <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:textStyle="bold"
            android:layout_alignTop="@+id/deleteButton"
            android:layout_alignParentEnd="true"/>
    <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_upload"
            android:id="@+id/sendButton"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:textStyle="bold"
            android:layout_below="@+id/saveButton"
            android:layout_alignStart="@+id/saveButton"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoImage"
            android:background="@drawable/gu_info"
            android:layout_alignBottom="@+id/sendButton"
            android:layout_alignParentStart="true"/>

    <TextView android:id="@+id/textReturn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/deleteButton"
              android:layout_marginTop="20dp"
              android:textStyle="bold" android:lines="1"/>
</RelativeLayout>