<?xml version="1.0" encoding="utf-8"?>
<!--

/*
 * Copyright (C) 2015 Iasc CHEN
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/connection_state"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/disconnected"
              android:textSize="18sp"
              android:layout_alignParentLeft="true"
              android:textStyle="italic"/>
    <TextView android:id="@+id/isSerial"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/is_serial"
              android:textSize="18sp"
              android:layout_alignParentRight="true"
              android:textStyle="italic"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/editMessage" android:layout_below="@+id/connection_state" android:lines="3"
            android:text="Welcome to Microduino!"/>

    <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/sendButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/menu_upload"
            android:layout_marginTop="20dp"
            android:textStyle="bold" android:enabled="false"
            android:layout_below="@+id/editMessage" android:layout_centerHorizontal="true"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoImage"
            android:background="@drawable/gu_info"
            android:layout_alignBottom="@+id/sendButton" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"/>

</RelativeLayout>